# cuda-cmake-github-actions

./: CMakeLists.txt  readme.md
.github/: problem-matchers.json
.github/workflows/: Ubuntu.yml  Ubuntu1604.yml  Ubuntu1804.yml  Windows.yml  WindowsVisualStudio2017.yml  WindowsVisualStudio2019.yml  build_ubuntu.yml  build_windows.yml  docker.yml  windowsVisualStudio2017.yml  windowsVisualStudio2019.yml  windows_vs2017.yml
include/: test.cuh  test.h
scripts/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
scripts/actions/: install_cuda_ubuntu.sh  install_cuda_windows.ps1
src/: main.cpp  main.cu
